manifests-failed/gerrit-operator-2.21.0.tgz-manifest.yaml
---
# Source: gerrit-operator/templates/gerrit_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gerrit
    helm.sh/chart: gerrit-operator-2.21.0
    app.kubernetes.io/name: gerrit-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.21.0"
    app.kubernetes.io/managed-by: Helm
  name: gerrit
spec:
  ports:
    - name: ui
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: ssh
      nodePort: 30022
      port: 30022
      protocol: TCP
      targetPort: 30022
  selector:
    app: gerrit
  sessionAffinity: None
  type: NodePort
---
# Source: gerrit-operator/templates/gerrit_deployment/gerrit_deployment_kubernetes.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: gerrit
    helm.sh/chart: gerrit-operator-2.21.0
    app.kubernetes.io/name: gerrit-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.21.0"
    app.kubernetes.io/managed-by: Helm
  name: gerrit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gerrit
  template:
    metadata:
      labels:
        app: gerrit
    spec:
      volumes:
        - name: gerrit-data
          persistentVolumeClaim:
            claimName: gerrit-data
      containers:
        - name: gerrit
          image: epamedp/edp-gerrit:3.6.2-oauth
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
            - name: gerrit-data
              mountPath: /var/gerrit/review_site
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: gerrit
      serviceAccount: gerrit
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
# Source: gerrit-operator/templates/operator_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: gerrit-operator-2.21.0
    app.kubernetes.io/name: gerrit-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.21.0"
    app.kubernetes.io/managed-by: Helm
  name: gerrit-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gerrit-operator
  template:
    metadata:
      labels:
        name: gerrit-operator
    spec:
      serviceAccountName: "edp-gerrit-operator"
      securityContext:
        runAsNonRoot: true
      containers:
        - name: gerrit-operator
          # Replace this with the built image name
          image: "epamedp/gerrit-operator:2.21.0"
          imagePullPolicy: "IfNotPresent"
          command:
            - gerrit-operator
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: 192Mi
            requests:
              cpu: 50m
              memory: 64Mi
---
# Source: gerrit-operator/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gerrit
  labels:
    app: gerrit
    helm.sh/chart: gerrit-operator-2.21.0
    app.kubernetes.io/name: gerrit-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.21.0"
    app.kubernetes.io/managed-by: Helm
spec:
    host: gerrit-gerrit-operator-2.21.0.tgz.
    path: /
    port:
        targetPort: 8080
    tls:
        insecureEdgeTerminationPolicy: Redirect
        termination: edge
    to:
        kind: Service
        name: gerrit
        weight: 100
    wildcardPolicy: None
